--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -430,14 +430,14 @@
                      </item>
                     </layout>
                    </item>
-                   <item row="1" column="0">
+                   <item row="2" column="0">
                     <widget class="QLabel" name="label_19">
                      <property name="text">
                       <string>Basic.Settings.Output.VideoBitrate</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="1" column="1">
+                   <item row="2" column="1">
                     <widget class="QSpinBox" name="simpleOutputVBitrate">
                      <property name="minimum">
                       <number>200</number>
@@ -450,14 +450,14 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="2" column="0">
+                   <item row="3" column="0">
                     <widget class="QLabel" name="label_20">
                      <property name="text">
                       <string>Basic.Settings.Output.AudioBitrate</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="2" column="1">
+                   <item row="3" column="1">
                     <widget class="QComboBox" name="simpleOutputABitrate">
                      <property name="currentIndex">
                       <number>4</number>
@@ -504,7 +504,7 @@
                      </item>
                     </widget>
                    </item>
-                   <item row="3" column="1">
+                   <item row="4" column="1">
                     <widget class="QCheckBox" name="simpleOutReconnect">
                      <property name="text">
                       <string>Basic.Settings.Output.Reconnect</string>
@@ -514,28 +514,28 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="4" column="0">
+                   <item row="5" column="0">
                     <widget class="QLabel" name="label_17">
                      <property name="text">
                       <string>Basic.Settings.Output.RetryDelay</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="4" column="1">
+                   <item row="5" column="1">
                     <widget class="QSpinBox" name="simpleOutRetryDelay">
                      <property name="maximum">
                       <number>30</number>
                      </property>
                     </widget>
                    </item>
-                   <item row="5" column="0">
+                   <item row="6" column="0">
                     <widget class="QLabel" name="label_22">
                      <property name="text">
                       <string>Basic.Settings.Output.MaxRetries</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="5" column="1">
+                   <item row="6" column="1">
                     <widget class="QSpinBox" name="simpleOutMaxRetries">
                      <property name="minimum">
                       <number>1</number>
@@ -545,7 +545,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="6" column="1">
+                   <item row="7" column="1">
                     <widget class="QCheckBox" name="simpleOutAdvanced">
                      <property name="text">
                       <string>Basic.Settings.Output.Advanced</string>
@@ -555,7 +555,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="7" column="1">
+                   <item row="8" column="1">
                     <widget class="QCheckBox" name="simpleOutUseCBR">
                      <property name="text">
                       <string>Basic.Settings.Output.UseCBR</string>
@@ -565,7 +565,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="8" column="0">
+                   <item row="9" column="0">
                     <widget class="QLabel" name="label_24">
                      <property name="enabled">
                       <bool>true</bool>
@@ -575,7 +575,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="8" column="1">
+                   <item row="9" column="1">
                     <widget class="QComboBox" name="simpleOutPreset">
                      <item>
                       <property name="text">
@@ -619,7 +619,7 @@
                      </item>
                     </widget>
                    </item>
-                   <item row="9" column="0">
+                   <item row="10" column="0">
                     <widget class="QCheckBox" name="simpleOutUseBufsize">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -635,7 +635,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="9" column="1">
+                   <item row="10" column="1">
                     <widget class="QSpinBox" name="simpleOutVBufsize">
                      <property name="enabled">
                       <bool>false</bool>
@@ -651,15 +651,51 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="10" column="0">
+                   <item row="11" column="0">
                     <widget class="QLabel" name="label_23">
                      <property name="text">
                       <string>Basic.Settings.Output.CustomEncoderSettings</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="10" column="1">
+                   <item row="11" column="1">
                     <widget class="QLineEdit" name="simpleOutCustom"/>
+                   </item>
+                   <item row="1" column="0">
+                    <widget class="QLabel" name="label_45">
+                     <property name="text">
+                      <string>Basic.Settings.Output.Format</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="1">
+                    <widget class="QComboBox" name="simpleOutRecFormat">
+                     <item>
+                      <property name="text">
+                       <string notr="true">flv</string>
+                      </property>
+                     </item>
+                     <item>
+                      <property name="text">
+                       <string notr="true">mp4</string>
+                      </property>
+                     </item>
+                     <item>
+                      <property name="text">
+                       <string notr="true">mov</string>
+                      </property>
+                     </item>
+                     <item>
+                      <property name="text">
+                       <string notr="true">mkv</string>
+                      </property>
+                     </item>
+                     <item>
+                      <property name="text">
+                       <string notr="true">ts</string>
+                      </property>
+                     </item>
+                    </widget>
                    </item>
                   </layout>
                  </widget>
@@ -1074,68 +1110,50 @@
                              </item>
                             </layout>
                            </item>
-                           <item row="2" column="0">
-                            <widget class="QLabel" name="advOutRecEncLabel">
-                             <property name="text">
-                              <string>Basic.Settings.Output.Encoder</string>
-                             </property>
-                            </widget>
-                           </item>
-                           <item row="2" column="1">
-                            <widget class="QComboBox" name="advOutRecEncoder"/>
-                           </item>
-                           <item row="3" column="0">
-                            <widget class="QCheckBox" name="advOutRecUseRescale">
-                             <property name="sizePolicy">
-                              <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-                               <horstretch>0</horstretch>
-                               <verstretch>0</verstretch>
-                              </sizepolicy>
-                             </property>
-                             <property name="layoutDirection">
-                              <enum>Qt::RightToLeft</enum>
-                             </property>
-                             <property name="text">
-                              <string>Basic.Settings.Output.Adv.Rescale</string>
-                             </property>
-                            </widget>
-                           </item>
-                           <item row="3" column="1">
-                            <widget class="QWidget" name="advOutRecRescaleContainer" native="true">
-                             <layout class="QHBoxLayout" name="horizontalLayout_4">
-                              <property name="leftMargin">
-                               <number>0</number>
-                              </property>
-                              <property name="topMargin">
-                               <number>0</number>
-                              </property>
-                              <property name="rightMargin">
-                               <number>0</number>
-                              </property>
-                              <property name="bottomMargin">
-                               <number>0</number>
-                              </property>
-                              <item>
-                               <widget class="QComboBox" name="advOutRecRescale">
-                                <property name="enabled">
-                                 <bool>false</bool>
-                                </property>
-                                <property name="editable">
-                                 <bool>true</bool>
-                                </property>
-                               </widget>
-                              </item>
-                             </layout>
-                            </widget>
-                           </item>
                            <item row="1" column="0">
+                            <widget class="QLabel" name="label_43">
+                             <property name="text">
+                              <string>Basic.Settings.Output.Format</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="1" column="1">
+                            <widget class="QComboBox" name="advOutRecFormat">
+                             <item>
+                              <property name="text">
+                               <string notr="true">flv</string>
+                              </property>
+                             </item>
+                             <item>
+                              <property name="text">
+                               <string notr="true">mp4</string>
+                              </property>
+                             </item>
+                             <item>
+                              <property name="text">
+                               <string notr="true">mov</string>
+                              </property>
+                             </item>
+                             <item>
+                              <property name="text">
+                               <string notr="true">mkv</string>
+                              </property>
+                             </item>
+                             <item>
+                              <property name="text">
+                               <string notr="true">ts</string>
+                              </property>
+                             </item>
+                            </widget>
+                           </item>
+                           <item row="2" column="0">
                             <widget class="QLabel" name="label_29">
                              <property name="text">
                               <string>Basic.Settings.Output.Adv.AudioTrack</string>
                              </property>
                             </widget>
                            </item>
-                           <item row="1" column="1">
+                           <item row="2" column="1">
                             <widget class="QWidget" name="widget_9" native="true">
                              <property name="sizePolicy">
                               <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -1184,6 +1202,60 @@
                                <widget class="QRadioButton" name="advOutRecTrack4">
                                 <property name="text">
                                  <string notr="true">4</string>
+                                </property>
+                               </widget>
+                              </item>
+                             </layout>
+                            </widget>
+                           </item>
+                           <item row="3" column="0">
+                            <widget class="QLabel" name="advOutRecEncLabel">
+                             <property name="text">
+                              <string>Basic.Settings.Output.Encoder</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="3" column="1">
+                            <widget class="QComboBox" name="advOutRecEncoder"/>
+                           </item>
+                           <item row="4" column="0">
+                            <widget class="QCheckBox" name="advOutRecUseRescale">
+                             <property name="sizePolicy">
+                              <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+                               <horstretch>0</horstretch>
+                               <verstretch>0</verstretch>
+                              </sizepolicy>
+                             </property>
+                             <property name="layoutDirection">
+                              <enum>Qt::RightToLeft</enum>
+                             </property>
+                             <property name="text">
+                              <string>Basic.Settings.Output.Adv.Rescale</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="4" column="1">
+                            <widget class="QWidget" name="advOutRecRescaleContainer" native="true">
+                             <layout class="QHBoxLayout" name="horizontalLayout_4">
+                              <property name="leftMargin">
+                               <number>0</number>
+                              </property>
+                              <property name="topMargin">
+                               <number>0</number>
+                              </property>
+                              <property name="rightMargin">
+                               <number>0</number>
+                              </property>
+                              <property name="bottomMargin">
+                               <number>0</number>
+                              </property>
+                              <item>
+                               <widget class="QComboBox" name="advOutRecRescale">
+                                <property name="enabled">
+                                 <bool>false</bool>
+                                </property>
+                                <property name="editable">
+                                 <bool>true</bool>
                                 </property>
                                </widget>
                               </item>
@@ -2017,12 +2089,20 @@
            </property>
           </widget>
          </item>
-         <item row="7" colspan="2">
+         <item row="7" column="0" colspan="2">
           <widget class="QScrollArea" name="audioSourceScrollArea">
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
            <widget class="QWidget" name="audioSourceWidget">
+            <property name="geometry">
+             <rect>
+              <x>0</x>
+              <y>0</y>
+              <width>98</width>
+              <height>28</height>
+             </rect>
+            </property>
            </widget>
           </widget>
          </item>
@@ -2356,15 +2436,23 @@
          <bool>true</bool>
         </property>
         <widget class="QWidget" name="hotkeyWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>98</width>
+           <height>28</height>
+          </rect>
+         </property>
          <layout class="QFormLayout" name="hotkeyLayout">
-          <property name="verticalSpacing">
-           <number>0</number>
-          </property>
           <property name="fieldGrowthPolicy">
            <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
           </property>
           <property name="labelAlignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="verticalSpacing">
+           <number>0</number>
           </property>
          </layout>
         </widget>
@@ -2399,8 +2487,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>724</width>
-              <height>536</height>
+              <width>734</width>
+              <height>553</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_16">
