--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -495,3 +495,16 @@ MuteCheckBox::indicator:unchecked {
 OBSHotkeyLabel[hotkeyPairHover=true] {
     color: red;
 }
+
+
+/* Label warning/error */
+
+QLabel#advOutRecWarning {
+    color: rgb(192, 128, 0);
+    font-weight: bold;
+}
+
+QLabel#advOutRecError {
+    color: rgb(192, 0, 0);
+    font-weight: bold;
+}
