--- a/obs/data/themes/Default.qss
+++ b/obs/data/themes/Default.qss
@@ -60,3 +60,16 @@ VolumeMeter {
     qproperty-peakColor: rgb(62, 241, 43);
     qproperty-peakHoldColor: rgb(0, 0, 0);
 }
+
+
+/* Label warning/error */
+
+QLabel#advOutRecWarning {
+    color: rgb(192, 128, 0);
+    font-weight: bold;
+}
+
+QLabel#advOutRecError {
+    color: rgb(192, 0, 0);
+    font-weight: bold;
+}
