--- a/obs/data/themes/Default.qss
+++ b/obs/data/themes/Default.qss
@@ -64,12 +64,12 @@ VolumeMeter {
 
 /* Label warning/error */
 
-QLabel#advOutRecWarning {
+QLabel#warningLabel {
     color: rgb(192, 128, 0);
     font-weight: bold;
 }
 
-QLabel#advOutRecError {
+QLabel#errorLabel {
     color: rgb(192, 0, 0);
     font-weight: bold;
 }
